@@ -2,9 +2,15 @@ htick 0.03
 ----------
 
 ----- cvs ci ------
+Sun Jan 23 13:52:00 2000
+Georgi:
+* fixed bug in function removeDesc
+* change code in filelist generator
+
+----- cvs ci ------
 Sun Jan 23 04:30:00 2000
 Georgi:
-* change code if function removeDesc
+* change code in function removeDesc
 
 ----- cvs ci ------
 Sat Jan 22 22:28:00 2000
